# rustpython-ndarray

./: Cargo.toml  TODO.md  problem.py  problem2.py  problem3.py  problem4.py
examples/: cli.rs
src/: generic_array.rs  generic_pyndarray.rs  lib.rs  py_slice_info_elem.rs
tests/: array_ops.rs
