[package]
name = "rustpython-ndarray"
version = "0.1.0"
edition = "2021"

[dependencies]
rustpython-vm = "0.4.0"
#ndarray = "0.16.1"
ndarray = { path = "../ndarray" }
#ndarray = { git = "https://github.com/Masterchef365/ndarray.git", branch = "bounds-check" }
#rustpython-stdlib = "0.4.0"

# For the macros in rustpython-vm
crossbeam-utils = "0.8.19"
num-traits = "0.2.19"

[dev-dependencies]
rustpython = "0.4.0"

[patch.crates-io]
rustpython-vm = { git = "https://github.com/RustPython/RustPython.git", branch = "main" }
rustpython = { git = "https://github.com/RustPython/RustPython.git", branch = "main" }
